# wz-uvp-1

./: README.md  sk.txt
EXP/hexdumps/: -p  h.sh  hex1.sh  s1
EXP/scriptz/: README.MD  mkcfonts.sh  ops.sh  s1.py  v1.tape  vhscommands.txt
EXP/scriptz/gfx/: mkcfonts.sh  sp.ansi
EXP/scriptz/gfx/k1/: a1  a1.pub  ln.txt
EXP/workp5/p51/: hello.py  pyproject.toml
WORK1/lib1/: pyproject.toml
WORK1/lib1/src/lib1/: __init__.py
WORK1/p1/: pyproject.toml
WORK1/p1/src/p1/: __init__.py
WORK1/p3/: hello.py  pyproject.toml
WORK1/p4/: pyproject.toml
WORK1/p4/src/p4/: __init__.py
WORK1/p5/src/p5/: __init__.py
WORK1/p570350a/: pub.sh  pyproject.toml
WORK1/p570350a/src/p570350a/: __init__.py
WORK1/p570350a/src/p5panty/: __init__.py
wz/: lix.fish
